Bug 32086 - [swrast] implementation error: unexpected format 0x8227 in _swrast_DrawPixels
Summary: [swrast] implementation error: unexpected format 0x8227 in _swrast_DrawPixels
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-03 13:32 UTC by Vinson Lee
Modified: 2010-12-04 14:56 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2010-12-03 13:32:50 UTC
mesa: 9f7f093090c45278162a03f10e147fac688eee6f (master)

Run piglit rg-draw-pixels test on swrast.

$ ./bin/rg-draw-pixels
Mesa 7.10-devel implementation error: unexpected format 0x8227 in _swrast_DrawPixels
Please report at bugzilla.freedesktop.org


mesa/include/GL/glext.h
  1700  #define GL_RG                             0x8227


mesa/src/mesa/swrast/s_drawpix.c
   691  void
   692  _swrast_DrawPixels( struct gl_context *ctx,
   693                      GLint x, GLint y,
   694                      GLsizei width, GLsizei height,
   695                      GLenum format, GLenum type,
   696                      const struct gl_pixelstore_attrib *unpack,
   697                      const GLvoid *pixels )
   698  {
...
   755     default:
   756        _mesa_problem(ctx, "unexpected format 0x%x in _swrast_DrawPixels", format);
   757        /* don't return yet, clean-up */
   758     }
Comment 1 Brian Paul 2010-12-03 13:49:58 UTC
Fixed w/ commit 75746e3779f9100fab8ac76242124152772dd8d9
Comment 2 Vinson Lee 2010-12-04 14:56:11 UTC
mesa: 859106f196ade77f59f8787b071739901cd1a843 (master)

Verified fixed.

piglit rg-draw-pixels passes on swrast.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.